improve operator module