@@ -1,16 +1,35 @@
 package com.demo.basicdemo.variable;
 
+import org.testng.annotations.Test;
+
 import java.util.ArrayList;
+
 
 public class NumberDemo {
 
-    public static void printChar(char c){
-        System.out.println(c);
-    }
-    public static void printCharacter(Character c){
+    public static void printChar(char c) {
         System.out.println(c);
     }
 
+    public static void printCharacter(Character c) {
+        System.out.println(c);
+    }
+
+
+    /**
+     * Use float or double?
+     * The precision of a floating point value indicates how many digits the value can have after the decimal point.
+     * The precision of float is only six or seven decimal digits, while double variables have a precision of about
+     * 15 digits. Therefore it is safer to use double for most calculations.
+     */
+    @Test
+    public void test() {
+        //Scientific Numbers：A floating point number can also be a scientific number with an "e" to indicate the power of 10:
+        float f1 = 35e3f;
+        double d1 = 12E4d;
+        System.out.println(f1);
+        System.out.println(d1);
+    }
 
     public static void main(String[] args) {
           /*基本类型的包装类
@@ -23,27 +42,21 @@ public class NumberDemo {
         double --> double
         boolean --> Boolean*/
 
-          //基本类型和包装类之间的转换
+        //基本类型和包装类之间的转换
         Integer i = new Integer(100);//手动装箱
-        Character character=new Character('p');//手动装箱
-        int j=i.intValue();  //手动拆箱
-        char ch= character.charValue();  //手动拆箱
+        Character character = new Character('p');//手动装箱
+        int j = i.intValue();  //手动拆箱
+        char ch = character.charValue();  //手动拆箱
         printChar(character);//Java编译器自动拆箱
         printCharacter(ch);//Java编译器自动装箱
         ArrayList<Double> doubles = new ArrayList<Double>();
         doubles.add(1.0);//Java编译器自动装箱
 
 
-
-
         //JDK5.0的一个新特性是自动装箱和自动拆箱
-        Double dd=new Double(1.0);
-        double m=dd;//自动拆箱  包装类对象自动转换成基本数据类型 本质上是，编译器编译时自动添加double m=dd.doubleValue()
-        Double n=1.1; //自动装箱  基本类型就自动地封装到与它相似类型的包装中 本质上是，编译器编译时自动添加：Double n =Double.valueOf(n);
-
-
-
-
+        Double dd = new Double(1.0);
+        double m = dd;//自动拆箱  包装类对象自动转换成基本数据类型 本质上是，编译器编译时自动添加double m=dd.doubleValue()
+        Double n = 1.1; //自动装箱  基本类型就自动地封装到与它相似类型的包装中 本质上是，编译器编译时自动添加：Double n =Double.valueOf(n);
 
 
         //String--->基本类型
@@ -63,13 +76,14 @@ public class NumberDemo {
            2使用String类的 valueOf() 方法
            3用一个空字符串加上基本类型*/
 
-           int c=1;
-           String strc=new Integer(c).toString();
-           String strc2=String.valueOf(c); //public static String valueOf(Object obj)
-           String strc3=c+"";
+        int c = 1;
+        String strc = new Integer(c).toString();
+        String strc2 = String.valueOf(c); //public static String valueOf(Object obj)
+        String strc3 = c + "";
         //String转成相应的数组
         char[] chars1 = st.toCharArray();
         byte[] bytes = st.getBytes();
     }
+
 
 }
